Chrome OS: Fix the regression of the broken focus rectangle on Launcher icon.

The regression was introduced in
https://codereview.chromium.org/2710053005. We need to make sure the
canvas was restored right after the launcher circle icon was drawn.

BUG=700449

Review-Url: https://codereview.chromium.org/2746263002
Cr-Commit-Position: refs/heads/master@{#456730}

Former-commit-id: c582275b87cf75a5467d3afaa74e042baa553b38